# typy-cli

./: Cargo.toml  README.md
resources/: spanish.txt
src/: main.rs
src/config/config_tables/: theme.rs
src/scores/: finish_overview.rs  graph.rs  stats.rs
src/scores/progress/: data.rs
src/terminal/: game.rs  keyboard.rs  mod.rs  terminal_utils.rs
src/word_provider/: finder.rs  mod.rs
