[package]
name = "typy"
version = "0.7.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
clap = {version = "4.5.30", features = ["derive"]}
rand = "0.9"
tui = "0.19.0"
dirs = "6.0"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
anyhow = "1.0.95"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1.4"
reqwest = { version = "0.12.12", features = ["blocking"] }
iana-time-zone = "0.1.65"
